--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,90 +25,110 @@ body {
 
 @-webkit-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background: rgb(195,117,34);
+        background: linear-gradient(0deg, rgba(195,117,34,1) 6%, rgba(255,248,5,1) 44%);
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	75%{
-		background-color: #FFEFD5;
+		background: rgb(255,154,239);
+background: linear-gradient(90deg, rgba(255,154,239,1) 0%, rgba(255,160,160,1) 50%, rgba(255,248,144,1) 100%);
 	}
 	100%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 }
 @-moz-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	75%{
-		background-color: #FFEFD5;
+		background: rgb(255,154,239);
+background: linear-gradient(90deg, rgba(255,154,239,1) 0%, rgba(255,160,160,1) 50%, rgba(255,248,144,1) 100%);
 	}
 	100%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 }
 
 @-o-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	75%{
-		background-color: #FFEFD5;
+		background: rgb(255,154,239);
+background: linear-gradient(90deg, rgba(255,154,239,1) 0%, rgba(255,160,160,1) 50%, rgba(255,248,144,1) 100%);
 	}
 	100%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 }
 
 @-ms-keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	75%{
-		background-color: #FFEFD5;
+		background: rgb(255,154,239);
+background: linear-gradient(90deg, rgba(255,154,239,1) 0%, rgba(255,160,160,1) 50%, rgba(255,248,144,1) 100%);
 	}
 	100%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 }
 
 @keyframes peach_alive {
 	0%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	25%{
 		background-color: #FFE4B5;
 	}
 	50%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 	75%{
-		background-color: #FFEFD5;
+		background: rgb(255,154,239);
+background: linear-gradient(90deg, rgba(255,154,239,1) 0%, rgba(255,160,160,1) 50%, rgba(255,248,144,1) 100%);
 	}
 	100%{
-		background-color: #FFDAB9;
+		background: rgb(255,159,130);
+background: linear-gradient(90deg, rgba(255,159,130,1) 0%, rgba(248,255,160,1) 50%, rgba(144,221,255,1) 100%);
 	}
 }
 
@@ -1283,12 +1303,15 @@ audio {
 
 .btn-primary {
         border-color: #466baf;
-        padding: 10px;
+        padding: "10px";
+		padding-left: "4px" ;
+		padding-right: "4px";
         text-transform: uppercase;
         font-family: 'Signika', sans-serif;
-        font-weight: 700;
+        font-weight: "bold";
         color: #fff;
-        background-color: #466baf;
+        background: rgb(238,174,202);
+        background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
 }
     .btn-primary:hover,
     .btn-primary:focus,
